# Hybrid-Classical-and-Reinforcement-Learning-Aircraft-Controllers

./: .gitattributes  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  Dockerfile  FAQ.md  GIT_SETUP.md  LICENSE  MANUAL_CONTROL.md  PHASE_1_COMPLETE.md  PYTHON_ENV_SETUP.md  QUICKSTART.md  README.md  README_DOCKER.md  ROADMAP.md  TESTING_WALKTHROUGH.md  build.sh  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_flight_logger.py
configs/aircraft/: rc_trainer.yaml
configs/controllers/: cascaded_pid.yaml  default_gains.yaml  jsbsim_gains.yaml
configs/missions/: square_pattern.yaml
configs/simulation/: rc_plane.yaml  realtime_and_fast.yaml
configs/visualization/: default_viz.yaml
controllers/: __init__.py  attitude_agent.py  base_agent.py  config_loader.py  hsa_agent.py  learned_rate_agent.py  mission_planner.py  rate_agent.py  surface_agent.py  types.py  waypoint_agent.py
controllers/config/: __init__.py  pid_gains.yaml  pid_gains_safe.yaml
controllers/modes/: __init__.py
controllers/utils/: __init__.py  pid_utils.py
cpp/bindings/: bindings.cpp
cpp/include/: pid_controller.h
cpp/src/: pid_controller.cpp
design_docs/: 00_OVERVIEW.md  01_ARCHITECTURE.md  02_ABSTRACTION_LAYERS.md  03_CONTROL_HIERARCHY.md  04_FLIGHT_CONTROLLER.md  05_AGENT_INTERFACE_CONTROL.md  06_RL_AGENT_TRAINING.md  07_SIMULATION_INTERFACE.md  08_HARDWARE_INTERFACE.md  09_DATA_FLOW.md  10_VISUALIZATION_MONITORING.md  11_DEPLOYMENT.md  12_IMPLEMENTATION_ROADMAP.md  13_MULTI_AGENT_MULTI_AIRCRAFT.md  DESIGN_REVIEW.md  IMPROVEMENTS_SUMMARY.md  README.md
docs/: 6dof_mathematical_formulation.tex  control_hierarchy_design.tex
examples/: 01_hello_controls.py  02_rl_vs_pid_demo.py  03_waypoint_square_demo.py  README.md  README_LEARNED_RATE.md  launch_pygame_gui.py  launch_pygame_gui_with_learned_rate.py  launch_pygame_gui_with_logging.py  multi_aircraft_demo.py  plot_telemetry_live.py  tune_pids.py  waypoint_mission.py
flightgear/: README.md  flightgear_interface.py  fly_with_visualization.py  launch_flightgear.sh  protocol.xml  simple_test.py
gui/: __init__.py  base_simulation_worker.py  flight_gui_pygame_v2.py  simulation_worker.py  simulation_worker_learned.py
interfaces/: __init__.py  agent.py  aircraft.py  aircraft_registry.py  sensor.py
learned_controllers/: QUICKSTART.md  README.md  eval_rate.py  example_usage.py  recover_training.py  run.sh  train_overnight.py  train_rate.py  train_rate_with_flight_viz.py  train_with_imitation.py
learned_controllers/config/: fast_mlp_training.yaml  overnight_training.yaml  overnight_v2.yaml  ppo_lstm.yaml  ppo_lstm_improved.yaml  quick_test.yaml
learned_controllers/data/: __init__.py  generators.py
learned_controllers/envs/: __init__.py  rate_env.py  residual_rate_env.py  rewards.py
learned_controllers/eval/: __init__.py  metrics.py
learned_controllers/models/: __init__.py
learned_controllers/networks/: __init__.py  lstm_policy.py
learned_controllers/utils/: __init__.py  pid_demonstrations.py  training_utils.py
learned_controllers/visualize/: README.md  __init__.py  examples.py  learning_curves.py  replay.py
simulation/: __init__.py  simplified_6dof.py  simulation_backend.py
tests/: __init__.py  conftest.py  test_control_integration.py  test_interfaces.py  test_logger.py  test_pid_bindings.py  test_registry.py  test_replay.py  test_simulation.py
validation/: README.md  TUNING_GUIDE.md  __init__.py  analyze_pid_controllers.py  comprehensive_waypoint_analysis.py  control_hierarchy_diagnostics.py  gain_tuner.py  jsbsim_backend.py  run_validation.py
validation/aircraft_models/engine/: direct_thrust.xml  electric_motor_50N.xml
validation/aircraft_models/rc_plane/: rc_plane.xml
validation/metrics/: __init__.py  trajectory_metrics.py
validation/scenarios/: base_scenario.py  level_flight.py
validation/tests/: test_jsbsim_backend.py
validation/visualization/: __init__.py
visualization/: __init__.py  aircraft_3d.py  logger.py  plotter.py  replay.py
