[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aircraft-control-algorithms"
version = "0.1.0"
description = "Aircraft control algorithms demonstration with hybrid Python/C++ implementation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Lucas Wright", email = "lhwright13@users.noreply.github.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: C++",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "plotly>=5.0.0",
    "pandas>=1.3.0",
    "h5py>=3.0.0",
    "dash>=2.0.0",
    "dash-bootstrap-components>=1.0.0",
    "pybind11>=2.9.0",
    "dataclasses-json>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
viz = [
    "pyvista>=0.35.0",
    "kaleido>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/lhwright13/controls"
